# daredevil-deployer

./: .gitignore  CNAME  README.md  _config.yml
daredevil_backend/: .env.dev  .env.example  .env.test  debug.py  hypercorn.toml  main.py  pyproject.toml  pytest.ini  requirements.txt  requirements1.txt
daredevil_backend/alembic/: env.py
daredevil_backend/alembic/versions/: 22cb80d2b356_changed_updated_created_for_git_.py  231d2a5b48ef_creating_clean_slate_database_initial_.py  52435c348b15_creating_clean_slate_database_initial_.py  5c49e712406e_changing_table_names_and_model_names_.py  62c14a84d5fa_requiring_app_id_app_slug_in_git_.py  828215855bd1_drop_mismatched_column.py  86af12ca042d_creating_clean_slate_database_initial_.py  90096ed017d0_creating_clean_slate_database_initial_.py  a2c7ebb07c82_creating_clean_slate_database_initial_.py  c9944d09f49c_installationrecord_model_changed_a_few_.py  e03d0fe4aa48_added_apprecord_installationrecord_.py  f3ade97fa117_creating_clean_slate_database_initial_.py
daredevil_backend/config/: auth.py  settings.py
daredevil_backend/configs/: __init__.py  auth.py  github_app_lib.py  github_library.py  settings.py
daredevil_backend/configs/locales/: en.yaml
daredevil_backend/db/: create.sql
daredevil_backend/dbs/: __init__.py  engine.py  redis.py  storage.py
daredevil_backend/dependency/: __init__.py  session.py
daredevil_backend/depends/: session.py
daredevil_backend/models/: __init__.py  application.py  base.py  dbs_engine.py  github.py  token.py  user.py
daredevil_backend/models/git/: __init__.py  app.py  github.py  install.py  installation.py  repos.py  repositories.py  repository.py  token.py
daredevil_backend/models/github/: __init__.py  app_record.py  app_records.py  installation_record.py  installation_records.py  token.py
daredevil_backend/models/user/: __init__.py  user.py
daredevil_backend/routes/: __init__.py  github.py  root.py  user.py
daredevil_backend/routes/git/: __init__.py  app.py  git.py  repo.py  repository.py
daredevil_backend/routes/github/: __init__.py  app.py  authenticate.py  github.py  repository.py
daredevil_backend/routes/github/app/: __init__.py  app.py
daredevil_backend/routes/github/repository/: __init__.py  repository.py
daredevil_backend/routes/internal/: __init__.py  auth.py  git_app.py  git_install.py  user.py
daredevil_backend/routes/internal/git/: __init__.py  app.py  installation.py
daredevil_backend/routes/user/: user.py
daredevil_backend/security/: __init__.py  auth.py  authenticate.py
daredevil_backend/services/: __init__.py  user.py
daredevil_backend/services/git/: __init__.py  app.py  install.py  installation.py  repo.py  repository.py
daredevil_backend/services/github/: __init__.py  app.py  installation.py
daredevil_backend/tests/: conftest.py  test_main.py
daredevil_backend/tests/configs/: conftest.py  test_github_app_lib.py  test_github_library.py
daredevil_backend/tests/routes/: conftest.py
daredevil_backend/tests/routes/git/: conftest.py  test_app.py  test_github.py  test_repository.py
daredevil_backend/tests/routes/github/: conftest.py  test_app.py  test_connection_manager.py  test_get_app.py  test_github.py  test_repository.py
daredevil_backend/utility/: __init__.py  git_lib.py  jwt.py  serializer.py
daredevil_frontend/: eslint.config.js  index.html  (+8 more)
(+197 files in other folders)
